Fix specials panel heading styles on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -609,6 +609,7 @@ input[type='radio'] {
     align-content: center;
     padding: 20px;
     color:white;
+    text-align: center;
     text-shadow: 0 0 5px black;
     box-shadow: inset 0 0 2000px rgba(0, 0, 0, 0.8);
 }
@@ -843,6 +844,16 @@ input[type='radio'] {
     #waiter-panel {
         order: -1;
     }
+
+    .special h4, .reccommendation h4 {
+        font-size: 2rem;
+    }
+    
+    
+    .special h2, .reccommendation h2 {
+        font-size: 5rem;
+    }
+    
 }
 
 @media screen and (max-width: 480px) {
